puse letra y color

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link href="styles/style.css" rel="stylesheet" type="text/css">
+   <link href="estilos/estilo.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dibujo</title>
@@ -9,7 +9,8 @@
 <body>
     <h1>
         Dibujo bonito
-    <h1>
+    </h1>
     
+    <div>hiu</div>
 </body>
 </html>
